# RAG-Application

./: .gitignore  README.md  get_embedding_function.py  populate_data.ipynb  populate_data.py  pyproject.toml  rag_query.py  secret_key.py
backend/app/: __init__.py  main.py
backend/app/routes/: __init__.py  query.py  upload.py
backend/app/services/: __init__.py  chunking.py  get_embedding_function.py  ingest.py  loader.py  rag.py  vectorstore.py
backend/app/utils/: __init__.py  paths.py
chroma/: chroma.sqlite3
frontend/src/: App.jsx
frontend/src/components/: Query.jsx  Response.jsx  Upload.jsx
frontend/src/services/: api.js
