[project]
name = "rag-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "chromadb>=1.5.4",
    "fastapi>=0.135.1",
    "huggingface-hub>=1.6.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.10",
    "pypdf>=6.8.0",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
